Projeto Gorjeta em Java + Android Studio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="txt_gorjeta">Gorjeta</string>
     <string name="txt_valor_gorjeta">Valor</string>
     <string name="txt_gorjeta_view">Gorjeta</string>
+    <string name="txt_database">Database</string>
     <string name="txt_total_gorjeta">Total</string>
 </resources>
